# bestia_viewer

./: .gitignore  install_hook.bat  notes.txt
bestia_web/: Cargo.toml
bestia_web/assets/dcs_units_metadata/: dcs_units_metadata.json
bestia_web/assets/test_imports/: caucasus_low_poly.gltf
bestia_web/src/: camera_movement_plugin.rs  corner_text_plugin.rs  dcs_data_plugin  dcs_data_plugin.rs  debug_console.rs  fps_counter_plugin.rs  json_loader.rs  main.rs  select_entity_plugin.rs  world_labels_plugin.rs
dcs_export/: Export.lua
dcs_export/bestia_viewer/Scripts/: bestia_export.lua
dcs_hook/: install_hook.bat  notes.txt
dcs_hook/bestia_viewer/Scripts/: bestia_export.lua
